# vnkey

./: .gitignore  CHANGELOG.md  README.md  SỬ DỤNG BỘ GÕ DÂN TỘC VIỆT.docx  parse_ede.py  parse_ede2.py  ~$ DỤNG BỘ GÕ DÂN TỘC VIỆT.docx
.github/aur/fcitx5-vnkey-bin/: PKGBUILD
.github/aur/ibus-vnkey-bin/: PKGBUILD
.github/workflows/: build.yml  macos-test.yml
tests/: firefox_test.py
vnkey-decompiled/: VnKey.Properties.Resources.resx  VnKey.csproj  VnKey.frmDangky.resx  VnKey.frmVnKey.resx  frmVnKey_full.txt
vnkey-decompiled/Properties/: AssemblyInfo.cs
vnkey-decompiled/VnKey.Properties/: Resources.cs  Settings.cs
vnkey-decompiled/gma.System.Windows/: UserActivityHook.cs
vnkey-engine/: Cargo.toml
vnkey-engine/src/: app_charset.rs  engine.rs  ffi.rs  lib.rs  macro_table.rs  vnlexi.rs
vnkey-engine/tests/: integration.rs
vnkey-fcitx5/: CMakeLists.txt
vnkey-fcitx5/data/: vnkey-addon.conf
vnkey-fcitx5/scripts/: postinst
vnkey-fcitx5/src/: glibc-compat.c  vnkey-engine.h  vnkey-fcitx5.cpp  vnkey-fcitx5.h
vnkey-ibus/: CMakeLists.txt
vnkey-ibus/src/: vnkey-engine.h  vnkey-ibus.c
vnkey-macos/: CMakeLists.txt  build.sh
vnkey-macos/resources/: Info.plist
vnkey-macos/src/: VnKeyAppDelegate.h  VnKeyAppDelegate.m  VnKeyEventTap.h  VnKeyEventTap.m  VnKeyInputController.h  VnKeyInputController.m  VnKeyPreferences.h  VnKeyPreferences.m  main.m  vnkey-engine.h
vnkey-windows/: Cargo.toml  resources.rc  vnkey.manifest
vnkey-windows/src/: app_charset.rs  blacklist.rs  config.rs  converter.rs  debug_log.rs  gui.rs  hook.rs  hotkey.rs  info.rs  main.rs  send.rs  tray.rs  webview.rs
